<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/taskCellContainer"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_margin="5dp"
    android:background="#00FFFFFF"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4"
        android:orientation="horizontal"
        android:rowCount="2">

        <ImageButton
            android:id="@+id/completeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="0dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/checkbox"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/unchecked_24"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="fill"
                android:layout_weight="3"
                android:text="@string/place_holder"
                tools:ignore="NestedWeights" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/dueDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/taskDate" />

                <TextView
                    android:id="@+id/dueTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/taskTime" />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/deleteBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/to_delete_task"
            android:hapticFeedbackEnabled="false"
            android:layout_marginEnd="0dp"
            app:srcCompat="@android:drawable/ic_menu_delete"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>